# gooroom-logout

./: Makefile.am  README  autogen.sh  configure.ac
data/: theme.css
debian/: changelog  control  copyright  rules
po/: POTFILES.in  en_GB.po  ko.po
src/: Makefile.am  gooroom-logout-command.c  gresource.xml  logout-dialog.c  logout-dialog.h  logout-dialog.ui  main.c
